# rbcar_common

./: README.md
rbcar_bringup/: CMakeLists.txt  package.xml
rbcar_bringup/launch/: rbcar_bringup.launch  rbcar_bringup_old.launch
rbcar_common/: CHANGELOG.rst  package.xml
rbcar_control/: CMakeLists.txt  package.xml
rbcar_control/config/: rbcar_control.yaml  simple_control.yaml  twist_mux.yaml
rbcar_control/launch/: rbcar_control.launch  simple_control.launch  twist_mux.launch
rbcar_control/lib/: ros-kinetic-ackermann-drive-controller_0.0.0-0xenial_amd64.deb  ros-melodic-ackermann-drive-controller_0.0.0-0bionic_amd64.deb  ros-melodic-robotnik-msgs_1.1.0-0bionic_amd64.deb  ros-noetic-ackermann-drive-controller_0.0.0-0focal_amd64.deb  ros-noetic-robotnik-msgs_2.2.0-0focal_amd64.deb
rbcar_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_description/launch/: rbcar.rviz  rbcar_ezgo_rviz.launch  rbcar_rviz.launch  rbcar_state_robot.launch  simple_state_robot.launch
rbcar_description/meshes/bases/: ez_go_945-2S.dae  ez_go_945-2S.stl  rbcar_chasis(simplificate).STL  rbcar_chassis.STL  rbcar_chassis.stl  rbcar_chassis_v2.stl
rbcar_description/meshes/wheels/: ez_go_945-2S_w1.stl  ez_go_945-2S_w2.stl  rbcar_wheel.STL  rbcar_wheel.stl
rbcar_description/robots/: rbcar.urdf  rbcar.urdf.xacro  rbcar_ezgo.urdf.xacro  simple_rbcar.urdf.xacro
rbcar_description/robots/versions/: rbcar_faster.urdf  rbcar_faster.urdf.xacro  rbcar_roborder.urdf  rbcar_roborder.urdf.xacro  rbcar_roborder_hw.urdf.xacro
rbcar_description/urdf/bases/: rbcar_base.gazebo.xacro  rbcar_base.urdf.xacro  rbcar_base_ezgo.urdf.xacro  rbcar_base_v2.urdf.xacro  roborder_base.gazebo.xacro  roborder_base.urdf.xacro
rbcar_description/urdf/sensors/: all_sensors.urdf.xacro  gps.urdf.xacro  hokuyo3d.urdf.xacro  hokuyo_utm30lx.urdf.xacro
rbcar_description/urdf/structures/: elevator.urdf.xacro
rbcar_description/urdf/wheels/: rear_axle.urdf.xacro  suspension_wheel.urdf.xacro  suspension_wheel_v2.urdf (copia).xacro  suspension_wheel_v2.urdf.xacro  suspension_wheel_v3.urdf.xacro
rbcar_joystick/launch/: ps4_pad.launch
rbcar_localization/: CMakeLists.txt  package.xml
rbcar_localization/config/: filter_odom.yaml  filter_world.yaml  navsat.yaml
rbcar_localization/launch/: fake_localization.launch  localization_run_sim.launch  navsat_transform_node.launch  robot_localization_odom.launch  robot_localization_world.launch  slam_gmapping.launch  works_but_flies
rbcar_msgs/: CMakeLists.txt  README.md  package.xml
rbcar_msgs/avro/: AbortFromOperator.avsc  AbortFromPilot.avsc  AvailableAssets.avsc  IllegalActivities.avsc  IllegalActivitiesDetection.avsc  IncidentAlertData.avsc  IntrusionDetection.avsc  LowLevelFusion.avsc  MissionConfirmation.avsc  MissionDescription.avsc  MissionExecution.avsc  MissionPlan.avsc  MissionStatus.avsc  MissionVisualization.avsc  PhotonicRadarData.avsc  PollutionIncident.avsc  SensorStatus.avsc  TelemetryData.avsc  VehicleStatus.avsc  VideostreamData.avsc
rbcar_msgs/msg/: AbortFromOperator.msg  AbortFromOperatorDataObject.msg  AbortFromPilot.msg  AccelerationType.msg  ActiveRules.msg  AttitudeType.msg  AutopilotVelocityType.msg  AvailableAsset.msg  AvailableAssets.msg  AvailableAssetsDataObject.msg  AvailableSensorsRecord.msg  CameraType.msg  FovType.msg  GimbalType.msg  IllegalActivities.msg  IllegalActivitiesDetection.msg  IncidentAlertData.msg  IntrusionDetection.msg  MissionConfirmation.msg  MissionConfirmationDataObject.msg  MissionExecution.msg  MissionExecutionDataObject.msg  MissionPlan.msg  MissionPlanDataObject.msg  MissionStatus.msg  MissionStatusDataObject.msg  MissionVisualization.msg  MissionVisualizationDataObject.msg  PositionType.msg  RadarNetworkData.msg  RoutePathSegment.msg  RoutePathSegments.msg  SensorStatus.msg  SensorStatusDataObject.msg  SensorType.msg  SequenceRecord.msg  Status.msg  TelemetryData.msg  TelemetryDataDataObject.msg  TrackContact.msg  (+6 more)
rbcar_navigation/: CMakeLists.txt  package.xml
rbcar_navigation/config/: controllers.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map_for_gps.yaml  local_costmap_params.yaml  move_base_flex.yaml  move_base_params.yaml  planners.yaml  polaris.mprim  polaris_02res.mprim  polaris_1m.mprim  polaris_noback.mprim  pure_pursuit_local_planner_params.yaml  rbcar.mprim  sbpl_global_planner_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_for_gps.yaml
rbcar_navigation/config/primitives/: navigation.mprim  navigation.txt  parking.mprim  parking.txt
rbcar_navigation/config_navigation/: costmap_common_params.yaml
rbcar_navigation/config_navigation/diff_drive/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rbcar_navigation/config_rviz/: move_base.rviz  move_base_local.rviz
rbcar_navigation/kinematic_model/: README.md  ack2dif.m  ackermann.m  ackermann.mprim  ackermann2.m  dif2ack.m  octave-workspace  polaris.mprim  polaris_02res.mprim  polaris_1m.mprim  prim_rbcar.mprim  rbcar.mprim  rbcar2.mprim  rbcar_1.mprim  rbcar_3.mprim  rbcar_4.mprim  rbcar_angular16.mprim  rbcar_angular32.mprim  rbcar_granangular.mprim  rbcar_granangular_menos.mprim  rbcar_granangular_turnback.mprim  rbcar_turnback.mprim  round2.m  toy.mprim  view_speeds.m
rbcar_navigation/launch/: move_base.launch  move_base_teb.launch  rbcar_gmapping.launch
rbcar_navigation/launch/navigation_amcl/: amcl.launch  move_base_amcl.launch  move_base_amcl_teb.launch
rbcar_navigation/launch/navigation_local/: move_base_local.launch
rbcar_navigation/maps/gs/: gs.yaml
rbcar_navigation/src/: laser_bounds_filter.cpp
rbcar_pad/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_pad/config/: ps4.yaml
rbcar_pad/launch/: ps4_pad.launch  rbcar_pad.launch
rbcar_pad/src/: rbcar_joystick.cpp  rbcar_pad.cpp
rbcar_robot_control/: CMakeLists.txt  package.xml
rbcar_robot_control/config/: rbcar.yaml
rbcar_robot_control/launch/: rbcar_robot_control.launch
rbcar_twist2ack/: setup.py
(+3 files in other folders)
