<?xml version="1.0"?>
<package>
  <name>rbcar_description</name>
  <version>0.0.0</version>
  <description>The rbcar_description package</description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <author email="info@erobotnik.es">Robotnik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>robotnik_sensors</run_depend>

  <export>
  </export>
 
 </package>
