<?xml version="1.0"?>
<package>
  <name>rbcar_navigation</name>
  <version>0.0.0</version>
  <description>The rbcar_navigation package</description>


  <maintainer email="jmnavarrete@robornik.es">Juan Manuel Navarrete Carrascosa</maintainer>
  <maintainer email="rnavarro@robornik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <run_depend>move_base</run_depend>
  <run_depend>teb_local_planner</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
