<?xml version="1.0"?>
<package>
  <name>rbcar_pad</name>
  <version>1.0.1</version>
  <description>The rbcar_pad package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <url type="website">http://wiki.ros.org/rbcar_pad</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbcar_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbcar_common/issues</url>

  <license>BSD</license>

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
  </export>
</package>
